tests/integration/snapshots/integration__commit__commit_with_parent.snap
---
source: tests/integration/commit.rs
expression: log
---
commit [sha1]
Author: [name] <[email]>
Date: [date]

    another commit

commit [sha1]
Author: [name] <[email]>
Date: [date]

    initial commit
