tests/integration/snapshots/integration__commit__initial_commit.snap
---
source: tests/integration/commit.rs
expression: log
---
commit [sha1]
Author: [name] <[email]>
Date: [date]

    initial commit
